[package]
name = "komodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
doc = false
name = "cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
clipboard = "0.5.0"
paste = "1.0.14"
rand = "0.8.5"
similar = "2.3.0"
